# lfg

./: Cargo.toml  LICENSE
core/: Cargo.toml
core/src/: lib.rs
core/src/model/: authorization.rs  integration.rs  mod.rs  user.rs
core/src/repo/: integration_repo.rs  mod.rs
hold/: Cargo.toml
hold/migrations/: 20220713044015_create_integrations_table.sql
hold/src/: lib.rs
hold/src/repo/: mod.rs  psql_integration_repo.rs
hold/tests/: integration_repo.rs
support/: Cargo.toml
support/src/: lib.rs
support/src/fixtures/: mod.rs  test_authorization.rs  test_integration.rs  test_user.rs
support/src/repo/: in_memory_integration_repo.rs  integration_repo.rs  mod.rs
web/: Cargo.toml
